--- a/style.css
+++ b/style.css
@@ -322,3 +322,96 @@ header{
     object-fit: cover;
     width: 100%;
 }
+
+.projetos{
+    display: flex;
+    
+    justify-content: space-evenly;
+    
+}
+
+.card{
+    height: 25rem;
+    width: 18rem;
+    position: relative;
+}
+
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    background-color: #262626;
+    
+}
+
+.card-img-wrapper img{
+    border-radius: .5rem;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    
+    opacity: .8;
+    transition: all 1s;
+}
+
+.card:hover .card-img-wrapper img{
+    opacity: .5;
+}
+
+.card-info{
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    visibility: hidden;
+    opacity: 0;
+    text-shadow: 0.3 0.2rem 0.3rem rgba(0, 0, 0, 0.6);
+    transition: all .3s;
+}
+
+.card:hover .card-info{
+    margin-bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+
+.card-info h3{
+    font-family: var(--font-secundary);
+    font-weight: bold;
+    color: #ff4081;
+    margin-bottom: 1.5rem;
+}
+
+.card-info p{
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+    background: #7303c0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right,  #ec38bc, #7303c0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #ec38bc, #7303c0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: var(--font_action);
+    font-size: 1rem;
+    color: #eee;
+    border-radius: 0.5rem;
+    border: none;
+    box-shadow: 0 0.1rem .8rem rgba(0, 0, 0, .4);
+    transition: all .3s;
+}
+
+
+.card:hover .card-info button:hover{
+    opacity: .8;
+}
