--- a/style.css
+++ b/style.css
@@ -325,9 +325,8 @@ header{
 
 .projetos{
     display: flex;
-    
     justify-content: space-evenly;
-    
+    margin-bottom: 1rem;
 }
 
 .card{
@@ -396,9 +395,7 @@ header{
     margin-bottom: 2rem;
 }
 
-.card-info button{
-    width: 8rem;
-    height: 2.5rem;
+.btn{
     background: #7303c0;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right,  #ec38bc, #7303c0);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #ec38bc, #7303c0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -411,7 +408,105 @@ header{
     transition: all .3s;
 }
 
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+}
+
 
 .card:hover .card-info button:hover{
     opacity: .8;
 }
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contato-wrapper{
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
+}
+
+.contato-left{
+    width: 35%;
+    background: 
+        linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+        url(./Imagens/contato.jpg);
+    background-size: cover;
+}
+
+.contato-right{
+    width: 65%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    font-family: var(--font-primary);
+    width: 100%;
+    text-align: center;
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-group{
+    position: relative;
+}
+
+.field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none;
+    margin: 1rem 0;
+}
+
+.input-group textarea{
+    width: 20rem;
+    height: 5rem;
+    resize: none; 
+    padding-top: 1rem ;
+}
+
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 1.2rem;
+    font-family: var(--font-secundary);
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: all 0.3s;
+}
+
+
+.field:focus{
+    border-bottom: 1px solid;
+}
+
+.btn-submit{
+    width: 100%;
+    height: 2rem;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
